--- a/src/components/page/Frase/style.css
+++ b/src/components/page/Frase/style.css
@@ -1,13 +1,13 @@
 /* style.css */
 
 .topico {
-  background-color: #f5f5f5; 
-  border: 1px solid #ccc; 
-  padding: 20px; 
-  margin: 10px; 
-  border-radius: 5px; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-  transition: background-color 0.3s, transform 0.3s; 
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  padding: 2rem 5rem;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.3s;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,13 +15,13 @@
 }
 
 .topico:hover {
-  background-color: #e0e0e0; 
-  transform: scale(1.02); 
+  background-color: #e0e0e0;
+  transform: scale(1.02);
 }
 
 .topico p {
-  margin: 0; 
-  text-align: center; 
+  margin: 0;
+  text-align: center;
 }
 
 .green-button {
@@ -42,4 +42,35 @@
   margin: 5px;
   cursor: pointer;
   border-radius: 4px;
+}
+
+.container-progresso {
+  width: 200px;
+  height: 20px;
+  background-image: linear-gradient(to right, green, red); /* Mistura entre verde e vermelho */
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.progresso {
+  height: 100%;
+  transition: width 0.3s ease-in-out;
+}
+
+.tags {
+  
+  background-color: rgb(177, 180, 180);
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+.descricao{
+  color: black;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size:x-large;
+}
+
+.autorNome{
+  color: rgba(121, 120, 118, 0.527);
+ 
 }
