--- a/src/components/page/Frase/style.css
+++ b/src/components/page/Frase/style.css
@@ -1,4 +1,8 @@
 /* style.css */
+*{
+  
+  color: #000;
+}
 
 .topico {
   background-color: #f5f5f5;
@@ -71,6 +75,6 @@
 }
 
 .autorNome{
-  color: rgba(121, 120, 118, 0.527);
+  color: rgba(54, 54, 53, 0.527);
  
 }
