--- a/src/components/page/Frase/style.css
+++ b/src/components/page/Frase/style.css
@@ -1,5 +1,3 @@
-/* style.css */
-
 
 .topico {
   background-color: #f5f5f5;
@@ -48,7 +46,7 @@
 .container-progresso {
   width: 200px;
   height: 20px;
-  background-image: linear-gradient(to right, green, red); /* Mistura entre verde e vermelho */
+  background-image: linear-gradient(to right, green, red); 
   border-radius: 10px;
   overflow: hidden;
 }
